# GovChat

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  AWS_DEPLOYMENT_STATUS.md  AWS_RESOURCES_LIST.md  CLEANUP_PLAN.md  CURRENT_STATUS.md  DIRECTORY_STRUCTURE.md  KSTARTUP_PIPELINE_COMPLETE.md  Makefile  PIPELINE_COMPLETE.md  README.md  cleanup.sh  debug_extraction.py  debug_individual.py  debug_test.py  lighthouse-budget.json  package.json  pyproject.toml  pytest.ini  security-report.json  test_ai_parsing.py  test_complete_pipeline.py  test_intelligent_chat.py  test_kstartup_api.py  test_pipeline.py  vitest.config.js
.husky/: commit-msg
docs/: ADMIN_DESIGN.md  AWS_DEPLOYMENT_STATUS.md  CODE_REVIEW.md  DATA_PIPELINE.md  DEBUGGING_GUIDE.md  DEV_ROADMAP.md  DIRECTORY_STRUCTURE.md  PROJECT_STATUS.md  README.md  coadreview.md  log-queries.md  runbook.md
frontend/: README.md  commitlint.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
infra/: app.py  auth_stack.py  cdk.context.json  deploy.py  infra_stack.py  lambdaConfig.js  requirements.txt
logs/: all_errors_20250714_004240.json  all_errors_20250714_005002.json  all_errors_20250714_010457.json  debug_review_20250714_004240.json  debug_review_20250714_004240.md  debug_review_20250714_005002.json  debug_review_20250714_005002.md  debug_review_20250714_010457.json  debug_review_20250714_010457.md
prompts/: build_phase.md  review_phase.md
scripts/: collect_all_errors.py  health-check.py  (+1 more)
(+708 files in other folders)
